// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SummarySection /> should adopt all types 1`] = `
<section
  class="sc-kAzzGY klYfTx"
>
  <div
    class="sc-chPdSV iTPMry"
  >
    <h2
      class="sc-kgoBCf gfZODg"
      color="green"
    >
      2 answered correctly
    </h2>
  </div>
  <div
    class="sc-chPdSV iTPMry"
  >
    <div>
      <div
        class="sc-cSHVUG kEUGVy"
      >
        <div
          class="sc-VigVT hvagPz"
        >
          <h3
            class="sc-jTzLTM foIWiG"
          >
            <span
              class="sc-fjdhpX bvevRA"
            >
              <strong
                class="sc-jzJRlG ZoIKu"
              >
                2
              </strong>
              Guru
            </span>
          </h3>
        </div>
        <div>
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
          />
          <ul
            class="sc-iwsKbI cHiZUQ"
          >
            <li
              class="sc-gzVnrw cZRkbu"
              data-for="vocabChipTip"
              data-place="bottom"
              data-tip="
              <ul>
                <li>
                  <span>JA </span>
                  <span lang=\\"ja\\">ちかぢか</span>
                </li>
                <li>
                  <span>EN</span>
                  <span>Before Long</span>
                </li>
                <li>
                  <span>RC</span>
                  <span>64%</span>
                </li>
              </ul>
            "
            >
              <a
                class="sc-htoDjs chsupN"
                href="/vocabulary/entry/553"
              >
                <span
                  class="sc-dnqmqq DDgta"
                  lang="ja"
                >
                  近々
                </span>
              </a>
            </li>
            <li
              class="sc-gzVnrw cZRkbu"
              data-for="vocabChipTip"
              data-place="bottom"
              data-tip="
              <ul>
                <li>
                  <span>JA </span>
                  <span lang=\\"ja\\">しょうじょ</span>
                </li>
                <li>
                  <span>EN</span>
                  <span>Young Lady</span>
                </li>
                <li>
                  <span>RC</span>
                  <span>64%</span>
                </li>
              </ul>
            "
            >
              <a
                class="sc-htoDjs chsupN"
                href="/vocabulary/entry/176"
              >
                <span
                  class="sc-dnqmqq DDgta"
                  lang="ja"
                >
                  少女
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`<SummarySection /> should adopt all types 2`] = `
<section
  class="sc-kAzzGY klYfTx"
>
  <div
    class="sc-chPdSV iTPMry"
  >
    <h2
      class="sc-kgoBCf kFdMEJ"
      color="red"
    >
      2 answered incorrectly
    </h2>
  </div>
  <div
    class="sc-chPdSV iTPMry"
  >
    <div>
      <div
        class="sc-cSHVUG kEUGVy"
      >
        <div
          class="sc-VigVT hvagPz"
        >
          <h3
            class="sc-jTzLTM foIWiG"
          >
            <span
              class="sc-fjdhpX bvevRA"
            >
              <strong
                class="sc-jzJRlG ZoIKu"
              >
                2
              </strong>
              Guru
            </span>
          </h3>
        </div>
        <div>
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
          />
          <ul
            class="sc-iwsKbI cHiZUQ"
          >
            <li
              class="sc-gzVnrw dekfRL"
              data-for="vocabChipTip"
              data-place="bottom"
              data-tip="
              <ul>
                <li>
                  <span>JA </span>
                  <span lang=\\"ja\\">ちかぢか</span>
                </li>
                <li>
                  <span>EN</span>
                  <span>Before Long</span>
                </li>
                <li>
                  <span>RC</span>
                  <span>64%</span>
                </li>
              </ul>
            "
            >
              <a
                class="sc-htoDjs chsupN"
                href="/vocabulary/entry/553"
              >
                <span
                  class="sc-dnqmqq dTLVwP"
                  lang="ja"
                >
                  近々
                </span>
              </a>
            </li>
            <li
              class="sc-gzVnrw dekfRL"
              data-for="vocabChipTip"
              data-place="bottom"
              data-tip="
              <ul>
                <li>
                  <span>JA </span>
                  <span lang=\\"ja\\">しょうじょ</span>
                </li>
                <li>
                  <span>EN</span>
                  <span>Young Lady</span>
                </li>
                <li>
                  <span>RC</span>
                  <span>64%</span>
                </li>
              </ul>
            "
            >
              <a
                class="sc-htoDjs chsupN"
                href="/vocabulary/entry/176"
              >
                <span
                  class="sc-dnqmqq dTLVwP"
                  lang="ja"
                >
                  少女
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`<SummarySection /> should adopt all types 3`] = `
<section
  class="sc-kAzzGY klYfTx"
>
  <div
    class="sc-chPdSV iTPMry"
  >
    <h2
      class="sc-kgoBCf PSoOL"
      color="orange"
    >
      2 critical items
    </h2>
  </div>
  <div
    class="sc-chPdSV iTPMry"
  >
    <div>
      <div
        class="__react_component_tooltip place-top type-dark "
        data-id="tooltip"
      />
      <ul
        class="sc-iwsKbI cHiZUQ"
      >
        <li
          class="sc-gzVnrw ctmdZY"
          data-for="vocabChipTip"
          data-place="bottom"
          data-tip="
          <ul>
            <li>
              <span>JA </span>
              <span lang=\\"ja\\">ちかぢか</span>
            </li>
            <li>
              <span>EN</span>
              <span>Before Long</span>
            </li>
            <li>
              <span>RC</span>
              <span>64%</span>
            </li>
          </ul>
        "
        >
          <a
            class="sc-htoDjs chsupN"
            href="/vocabulary/entry/553"
          >
            <span
              class="sc-dnqmqq hpzYwF"
              lang="ja"
            >
              近々
            </span>
          </a>
        </li>
        <li
          class="sc-gzVnrw ctmdZY"
          data-for="vocabChipTip"
          data-place="bottom"
          data-tip="
          <ul>
            <li>
              <span>JA </span>
              <span lang=\\"ja\\">しょうじょ</span>
            </li>
            <li>
              <span>EN</span>
              <span>Young Lady</span>
            </li>
            <li>
              <span>RC</span>
              <span>64%</span>
            </li>
          </ul>
        "
        >
          <a
            class="sc-htoDjs chsupN"
            href="/vocabulary/entry/176"
          >
            <span
              class="sc-dnqmqq hpzYwF"
              lang="ja"
            >
              少女
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`<SummarySection /> should adopt isExpanded prop 1`] = `
<section
  class="sc-kAzzGY klYfTx"
>
  <div
    class="sc-chPdSV iTPMry"
  >
    <h2
      class="sc-kgoBCf gfZODg"
      color="green"
    >
      2 answered correctly
    </h2>
  </div>
  <div
    class="sc-chPdSV iTPMry"
  >
    <div>
      <div
        class="sc-cSHVUG kEUGVy"
      >
        <div
          class="sc-VigVT hvagPz"
        >
          <h3
            class="sc-jTzLTM foIWiG"
          >
            <span
              class="sc-fjdhpX bvevRA"
            >
              <strong
                class="sc-jzJRlG ZoIKu"
              >
                2
              </strong>
              Guru
            </span>
          </h3>
        </div>
        <ul
          class="sc-bZQynM iidow"
        >
          <li
            class="sc-bxivhb eykAIq"
          >
            <a
              class="sc-ifAKCX ipRurr sc-htpNat KtFsv"
              href="/vocabulary/entry/553"
            >
              <dl
                class="sc-EHOje gAloyo"
                color="green"
              >
                <div
                  class="reading"
                >
                  <dt
                    class="kana"
                    lang="ja"
                  >
                    ちかぢか, きんきん, ちかじか
                  </dt>
                  <dt
                    class="character"
                    lang="ja"
                  >
                    近々
                  </dt>
                  <div
                    class="separator"
                  />
                  <dt
                    class="kana"
                    lang="ja"
                  >
                    やがて
                  </dt>
                  <dt
                    class="character"
                    lang="ja"
                  >
                    軈て
                  </dt>
                  <div
                    class="separator"
                  />
                </div>
                <dd
                  class="meaning"
                >
                  before long, soon
                </dd>
              </dl>
            </a>
          </li>
          <li
            class="sc-bxivhb eykAIq"
          >
            <a
              class="sc-ifAKCX ipRurr sc-htpNat KtFsv"
              href="/vocabulary/entry/176"
            >
              <dl
                class="sc-EHOje gAloyo"
                color="green"
              >
                <div
                  class="reading"
                >
                  <dt
                    class="kana"
                    lang="ja"
                  >
                    しょうじょ, おとめ
                  </dt>
                  <dt
                    class="character"
                    lang="ja"
                  >
                    少女
                  </dt>
                  <div
                    class="separator"
                  />
                </div>
                <dd
                  class="meaning"
                >
                  young lady, little girl, maiden, daughter, girl
                </dd>
              </dl>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</section>
`;
